# compiled-regex

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
benches/: continuous.rs  simplistic.rs  test_data.rs  unoptimized_single_simple_character.rs
compiled-regex-cli/: Cargo.toml
compiled-regex-core/: Cargo.toml
compiled-regex-core/src/: code_gen_util.rs  ir.rs  lib.rs  parser.rs  test.rs  translate.rs  types.rs
compiled-regex-core/src/ir/: character.rs  composite.rs  functions.rs  mod.rs  repeat.rs  sections.rs
compiled-regex-macro/: Cargo.toml
compiled-regex-macro/src/: lib.rs
data/: easylist_url_regex.txt
examples/compiled-regex-cli/: Cargo.toml
examples/compiled-regex-cli/src/: main.rs
scripts/: benchmark_condenser.py  easylist_url_to_regex.py  keggle_csv_cleaner.py  plot_continuous.gp  table.gp
src/: class.rs  code_gen_util.rs  lib.rs  types.rs
tests/: simple.rs  test_data.rs
