[package]
name = "compiled-regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./compiled-regex-core",
    "./compiled-regex-macro"
]

[dependencies]
compiled-regex-core = {path = "./compiled-regex-core"}
compiled-regex-macro = {path = "./compiled-regex-macro"}


[dev-dependencies]
criterion = "0.4.0"
plotters = "0.3.4"
