# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "compiled-regex-core"
version = "0.1.0"
edition = "2021"


[dependencies]
const_format = "0.2.30"
enum_dispatch = "0.3.11"
hex = "0.4.3"
memchr = "2.5.0"
regex = "1.8.1"
regex-syntax = "0.7.1"
sha2 = "0.10.6"

